--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,11 @@
     <title>P2P Scrabble</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body></body>
+  <body>
+    <form id="registration">
+      <h2>"Login"</h2>
+      <input type="text" name="username" id="username" />
+      <button type="submit">Register</button>
+    </form>
+  </body>
 </html>
