--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,23 @@
       <input type="text" name="username" id="username" />
       <button type="submit">Register</button>
     </form>
+    <h1>Connection</h1>
+    <div>
+      <h2>Local Description</h2>
+      <p id="local-description"></p>
+    </div>
+    <div>
+      <h2>Remote Description</h2>
+      <form id="remote-description-form">
+        <textarea
+          id="remote-description"
+          name="remote-description"
+          cols="100"
+          rows="10"
+        ></textarea>
+        <br />
+        <button type="submit">Set</button>
+      </form>
+    </div>
   </body>
 </html>
